fixed overflow

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -132,6 +132,7 @@ body {
 
 @media screen and (max-width: 652px) {
     .container {
+        overflow: auto;
         width: initial;
         height: initial;
     }
